refactor MM routes, add reserve tracking and trade audit log.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-fastapi
-uvicorn
-pydantic
-python-dotenv
-openai
-sqlalchemy
-psycopg2-binary
-numpy
-pytest
-httpx
-requests>=2.31.0
-web3>=6.0.0
+anthropic
 beautifulsoup4
+fastapi
+httpx
+openai
+psycopg2-binary
+pydantic
+pytest
+python-dotenv
+sqlalchemy
+numpy
+requests>=2.31.0
+uvicorn
+web3>=6.0.0
